bin_PROGRAMS = jikespg

jikespg_SOURCES = ctabs.c \
                  globals.c \
                  lpgparse.c \
                  lpgutil.c \
                  main.c \
                  mkfirst.c \
                  mkred.c \
                  mkstates.c \
                  partset.c \
                  prntstat.c \
                  produce.c \
                  ptables.c \
                  remsp.c \
                  resolve.c \
                  spacetab.c \
                  tabutil.c \
                  timetab.c

noinst_HEADERS = c370.h \
                 common.h \
                 header.h \
                 lpgact.h \
                 lpgact.i \
                 lpgdcl.h \
                 lpgdef.h \
                 lpgparse.h \
                 lpgprs.h \
                 lpgsym.h \
                 reduce.h \
                 space.h

